--- a/StoreWebApplication.Mvc/Views/_ViewImports.cshtml
+++ b/StoreWebApplication.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using StoreWebApplication.Mvc
 @using StoreWebApplication.Mvc.Models
+@using StoreWebApplication.Mvc.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
